[gd_scene load_steps=26 format=2]

[ext_resource path="res://Instances/UI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Instances/CellLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sounds/Music/Dungeon.wav" type="AudioStream" id=3]
[ext_resource path="res://Tilesets/TilesetMain.tres" type="TileSet" id=4]
[ext_resource path="res://Instances/Transition.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/Objects/Dungeon 1/Dungeon1Door2.gd" type="Script" id=6]
[ext_resource path="res://Sprites/Props/Door open.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Props/Door 2.png" type="Texture" id=8]
[ext_resource path="res://Instances/Props/IndicatorLight.tscn" type="PackedScene" id=9]
[ext_resource path="res://Sprites/Props/Light off.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Props/Light on 1.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Props/Light on 2.png" type="Texture" id=12]
[ext_resource path="res://Instances/System/PitController.tscn" type="PackedScene" id=13]
[ext_resource path="res://Instances/Props/Column.tscn" type="PackedScene" id=14]
[ext_resource path="res://Instances/Props/Torch.tscn" type="PackedScene" id=15]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "open",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "closed",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 17, 16 )

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 11 ) ],
"loop": true,
"name": "on",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "off",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 72, 12 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 72, 12 )

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 72, 4 )

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 4, 28 )

[sub_resource type="RectangleShape2D" id=8]

custom_solver_bias = 0.0
extents = Vector2( 4, 12 )

[sub_resource type="RectangleShape2D" id=9]

custom_solver_bias = 0.0
extents = Vector2( 8, 28 )

[sub_resource type="RectangleShape2D" id=10]

custom_solver_bias = 0.0
extents = Vector2( 16, 28 )

[node name="Node2D" type="Node2D"]

_sections_unfolded = [ "Transform", "Z Index" ]

[node name="UI" parent="." index="0" instance=ExtResource( 1 )]

[node name="CellLabel" parent="." index="1" instance=ExtResource( 2 )]

text = "??"
cell_index_x = -1
cell_index_y = -1
cell_music = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="." index="2"]

mode = 0
tile_set = ExtResource( 4 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 0, 31, 0, 1, 30, 0, 2, 30, 0, 3, 30, 0, 4, 30, 0, 5, 30, 0, 6, 30, 0, 7, 31, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 22, 0, 13, 30, 0, 14, 30, 0, 15, 30, 0, 16, 30, 0, 17, 30, 0, 18, 30, 0, 19, 22, 0, 65536, 31, 0, 65537, 30, 0, 65538, 30, 0, 65539, 30, 0, 65540, 30, 0, 65541, 30, 0, 65542, 30, 0, 65543, 31, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 22, 0, 65549, 30, 0, 65550, 30, 0, 65551, 30, 0, 65552, 30, 0, 65553, 30, 0, 65554, 30, 0, 65555, 22, 0, 131072, 31, 0, 131073, 30, 0, 131074, 30, 0, 131075, 30, 0, 131076, 30, 0, 131077, 30, 0, 131078, 30, 0, 131079, 31, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 22, 0, 131085, 30, 0, 131086, 30, 0, 131087, 30, 0, 131088, 30, 0, 131089, 30, 0, 131090, 30, 0, 131091, 22, 0, 196608, 31, 0, 196609, 24, 0, 196610, 24, 0, 196611, 24, 0, 196612, 24, 0, 196613, 24, 0, 196614, 24, 0, 196615, 25, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 23, 0, 196621, 24, 0, 196622, 24, 0, 196623, 24, 0, 196624, 24, 0, 196625, 24, 0, 196626, 24, 0, 196627, 22, 0, 262144, 31, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 22, 0, 327680, 25, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 23, 0, 393216, 31, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 22, 0, 458752, 31, 0, 458753, 0, 0, 458754, 40, 0, 458755, 40, 0, 458756, 0, 0, 458757, 0, 0, 458758, 40, 0, 458759, 40, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 40, 0, 458765, 40, 0, 458766, 0, 0, 458767, 0, 0, 458768, 40, 0, 458769, 40, 0, 458770, 0, 0, 458771, 22, 0, 524288, 25, 0, 524289, 0, 0, 524290, 1, 0, 524291, 1, 0, 524292, 0, 0, 524293, 0, 0, 524294, 1, 0, 524295, 1, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 1, 0, 524301, 1, 0, 524302, 0, 0, 524303, 0, 0, 524304, 1, 0, 524305, 1, 0, 524306, 0, 0, 524307, 23, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 786432, 33, 0, 786433, 0, 0, 786434, 40, 0, 786435, 40, 0, 786436, 0, 0, 786437, 0, 0, 786438, 40, 0, 786439, 40, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 40, 0, 786445, 40, 0, 786446, 0, 0, 786447, 0, 0, 786448, 40, 0, 786449, 40, 0, 786450, 0, 0, 786451, 21, 0, 851968, 31, 0, 851969, 0, 0, 851970, 1, 0, 851971, 1, 0, 851972, 0, 0, 851973, 0, 0, 851974, 1, 0, 851975, 1, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 1, 0, 851981, 1, 0, 851982, 0, 0, 851983, 0, 0, 851984, 1, 0, 851985, 1, 0, 851986, 0, 0, 851987, 22, 0, 917504, 31, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 0, 0, 917522, 0, 0, 917523, 22, 0, 983040, 27, 0, 983041, 32, 0, 983042, 32, 0, 983043, 32, 0, 983044, 32, 0, 983045, 32, 0, 983046, 32, 0, 983047, 33, 0, 983048, 14, 0, 983049, 14, 0, 983050, 14, 0, 983051, 14, 0, 983052, 21, 0, 983053, 32, 0, 983054, 32, 0, 983055, 32, 0, 983056, 32, 0, 983057, 32, 0, 983058, 32, 0, 983059, 26, 0 )
_sections_unfolded = [ "Cell" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Transition" parent="." index="3" instance=ExtResource( 5 )]

position = Vector2( 80, 124 )
scale = Vector2( 0.5, 0.125 )
target_scene = "res://Scenes/Dungeon 1/Dungeon1-7.tscn"
target_x = 0
target_y = 16
direction = "down"

[node name="Dungeon1Door2" type="StaticBody2D" parent="." index="4"]

position = Vector2( 80, 16 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="AnimatedSprite" parent="Dungeon1Door2" index="0"]

position = Vector2( 0, -1 )
frames = SubResource( 1 )
animation = "closed"
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dungeon1Door2" index="1"]

shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Transition" parent="Dungeon1Door2" index="2" instance=ExtResource( 5 )]

position = Vector2( 0, 18 )
scale = Vector2( 0.40625, 0.0937501 )
target_scene = "res://Scenes/Dungeon 1/Dungeon1-11.tscn"
target_x = 0
target_y = 100
direction = "up"

[node name="IndicatorLight" parent="Dungeon1Door2" index="3" instance=ExtResource( 9 )]

position = Vector2( -7, -4 )
frames = SubResource( 3 )
_sections_unfolded = [ "Transform" ]
target_flag = "dungeon1_switches2TL"

[node name="IndicatorLight2" parent="Dungeon1Door2" index="4" instance=ExtResource( 9 )]

position = Vector2( 5, -4 )
frames = SubResource( 3 )
_sections_unfolded = [ "Transform", "Z Index" ]
target_flag = "dungeon1_switches2TR"

[node name="IndicatorLight3" parent="Dungeon1Door2" index="5" instance=ExtResource( 9 )]

position = Vector2( -7, 7 )
frames = SubResource( 3 )
_sections_unfolded = [ "Transform", "Z Index" ]
target_flag = "dungeon1_switches2BL"

[node name="IndicatorLight4" parent="Dungeon1Door2" index="6" instance=ExtResource( 9 )]

position = Vector2( 5, 7 )
frames = SubResource( 3 )
_sections_unfolded = [ "Transform", "Z Index" ]
target_flag = "dungeon1_switches2BR"

[node name="PitController" parent="." index="5" instance=ExtResource( 13 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PitController" index="3"]

position = Vector2( 79, 44 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PitController" index="4"]

position = Vector2( 79, 84 )
shape = SubResource( 5 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="PitController" index="5"]

position = Vector2( 79, 116 )
shape = SubResource( 6 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="PitController" index="6"]

position = Vector2( 11, 84 )
shape = SubResource( 7 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="PitController" index="7"]

position = Vector2( 3, 84 )
shape = SubResource( 8 )

[node name="CollisionShape2D10" type="CollisionShape2D" parent="PitController" index="8"]

position = Vector2( 155, 84 )
shape = SubResource( 8 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="PitController" index="9"]

position = Vector2( 147, 84 )
shape = SubResource( 7 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="PitController" index="10"]

position = Vector2( 119, 84 )
shape = SubResource( 9 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="PitController" index="11"]

position = Vector2( 39, 84 )
shape = SubResource( 9 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="PitController" index="12"]

position = Vector2( 79, 84 )
shape = SubResource( 10 )

[node name="Column" parent="." index="6" instance=ExtResource( 14 )]

[node name="Column2" parent="." index="7" instance=ExtResource( 14 )]

position = Vector2( 103, 14 )

[node name="Transition2" parent="." index="8" instance=ExtResource( 5 )]

position = Vector2( 4, 84 )
scale = Vector2( 0.125, 0.375 )
target_scene = "res://Scenes/Dungeon 1/Dungeon1-9.tscn"
target_x = 144
direction = "left"

[node name="Transition3" parent="." index="9" instance=ExtResource( 5 )]

position = Vector2( 156, 84 )
scale = Vector2( 0.125, 0.375 )
target_scene = "res://Scenes/Dungeon 1/Dungeon1-10.tscn"

[node name="Torch" parent="." index="10" instance=ExtResource( 15 )]

position = Vector2( 40, 11 )

[node name="Torch3" parent="." index="11" instance=ExtResource( 15 )]

position = Vector2( 20, 11 )

[node name="Torch2" parent="." index="12" instance=ExtResource( 15 )]

position = Vector2( 120, 11 )

[node name="Torch4" parent="." index="13" instance=ExtResource( 15 )]

position = Vector2( 140, 11 )


